--- a/src/components/ToolBar/ToolBar.scss
+++ b/src/components/ToolBar/ToolBar.scss
@@ -1,12 +1,21 @@
 
 
 .Bar{
-  background-color: #0ecdc3;
+  background-color: #b4b4b4;
   z-index: 3;
   position: relative;
   display: flex;
-  justify-content: space-evenly;
-  width: 100%;
   align-items: center;
   height: 100px;
+  &-turn{
+    // background-color: red;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    img{
+      width: 30%;
+    }
+    
+  }
 }
